--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </header>
     <section class="banner">
         <h1>this is banner</h1>
+        <p>Andre Russel</p>
     </section>
 </body>
 
