--- a/index.html
+++ b/index.html
@@ -14,16 +14,30 @@
 <body>
     <header>
         <div class="container">
-            <div class="col-12"></div>
+            <div class="row">
+                <div class="col-12">
+                    <img src="https://source.unsplash.com/collection/190727/800x600?1" alt="">
+                </div>
+
+            </div>
         </div>
     </header>
     <main>
         <section class="hero">
             <div class="container">
-                <div class="row">
-                    <div style="background-color: red;" class="col-4 col-m-6"></div>
-                    <div style="background-color: green;" class="col-4 col-m-6"></div>
-                    <div style="background-color: orange" class="col-4 col-m-6"></div>
+                <div class="row justify-center">
+                    <div class="col-3 col-m-6">
+                        <img src="https://source.unsplash.com/collection/190727/800x600?1" alt="">
+                    </div>
+                    <div class="col-3 col-m-6">
+                        <img src="https://source.unsplash.com/collection/190727/800x600?2" alt="">
+                    </div>
+                    <div class="col-3 col-m-6">
+                        <img src="https://source.unsplash.com/collection/190727/800x600?3" alt="">
+                    </div>
+                    <div class="col-3 col-m-6">
+                        <img src="https://source.unsplash.com/collection/190727/800x600?4" alt="">
+                    </div>
                 </div>
             </div>
         </section>
